# Production-EnR

./: .gitignore  README.md  class_handler.py  database_create.py  database_create_test.py  dataholder.py  dataholder_test.py  main.py  model_trainer.py  notebook_get.ipynb  notebook_prod_eolienne.ipynb  notebook_prod_hydro.ipynb  notebook_samy.ipynb  pyproject.toml
backend/app/: database_manager.py  hydro_train_model.py  main.py  model_trainer.py  pipeline.py  train_models.py
backend/app/routes/: eolienne.py  hydro.py  solaire.py
backend/app/saved_models/: eolienne_random_forest_model.pkl  hydro_random_forest_model.pkl  solaire_random_forest_model.pkl
classes/: dataholder.py
frontend/: app.py
frontend/pages/: Hydro.py  Solar.py  Wind.py
handlers/: datahandler.py  dataholder.py  hydro_handler.py
notebooks/: notebook_prod_eolienne.ipynb  notebook_prod_hydro.ipynb  notebook_samy.ipynb  notebook_select_model.ipynb
