[project]
name = "production-enr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "openmeteo-requests>=1.7.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.50.0",
    "supabase>=2.20.0",
    "uvicorn>=0.37.0",
]
